--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         status.innerHTML = "Đang Xác Thực Khuôn Mặt...<br>Vui Lòng Giữ Nguyên Vị Trí.";
 
         const script = document.createElement('script');
-        script.src = 'lỏ.js'; 
+        script.src = 'main.js'; 
         document.body.appendChild(script);
 
         const checkFinished = setInterval(() => {
